<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="379dp"
        android:layout_height="370dp"
        android:background="@drawable/custom_shadow"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" >

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="1dp"
            android:orientation="vertical"
            app:counterEnabled="true"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="334dp"
                android:layout_height="56dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:width="333dp"
                android:height="56dp"
                android:background="@drawable/edittext_custom"
                android:hint="@string/tEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="334dp"
        android:layout_height="61dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/edittext_custom"
            android:baselineAligned="false"
            android:hint="@string/tPassword"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="154dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@drawable/iconlogin" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="291dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/customlogin_shadow"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="Login"
        android:textColor="@color/black"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />


    <TextView
        android:id="@+id/register"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:background="#00000000"
        android:text="@string/mDaftar"
        android:textColor="#878787"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />


</androidx.constraintlayout.widget.ConstraintLayout>